# Robotica-2026-Groep8

./: README.md
Elektrotechniek/: Korte_analyse_missende_bestanden.md  Overzicht_TOP_Elektrotechniek.md  README.md  TOP_Checklist_Elektrotechniek.md
Elektrotechniek/02_Schemas_PCB_Layouts/: Systeem_Aansluitschema.md
Elektrotechniek/03_Stuklijsten_BOM/: Stuklijst BOM.xlsx
Elektrotechniek/04_Analyses_Berekeningen/: Comunicatie en OSI laag.docx  Controller_analyse_ontwerp.docx  Plan Van Aanpak Controller.docx  Stroomverbruik Robot.docx
Elektrotechniek/05_Controller_Software/: README.md
Elektrotechniek/06_Testen_Verificatie_Validatie/: Hardware Validatie en Testrapport.docx
RobotControl/AX12A_Debug/: AX12A_Debug.ino
RobotControl/AX12A_Python/: dynamixel_cli.py
RobotControl/RPi_Dynamixel_Dashboard/: requirements.txt  text.txt
SmartController/: Readme.md
SmartController/Arduino Nano Controller/: platformio.codex.ini  platformio.ini
Vision/: README.md  detectie.launch.py  detectie_params.yaml  package.xml  pi2_display.py  reCamera_Color_Detection.py  reCamera_Color_Detection_Node.py  reCamera_Detection.py  reCamera_Final.py  setup.py  strawberry_Detection_Node.py  strawberry_Detecttion_Node.py
my_robot_controller1/: cmdlinecopy.txt  configcopy.txt  package.xml  setup.cfg  setup.py
my_robot_description/: CMakeLists.txt
rs2_ws/install/hogpie_arm_driver/share/hogpie_arm_driver/: package.bash  package.ps1  package.sh  package.xml  package.zsh
test_scripts/: gpioTest.bash  test.py  test2.py  testPing.py  testping2.py  testu2.py  u2d2.py
(+253 files in other folders)
